<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainGoogle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="203dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:orientation="vertical">
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/9214589741"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-25dp"
                tools:layout_editor_absoluteY="689dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_title"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etFNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/req_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etFTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/req_phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etFCumple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/req_bd"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/req_gender" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbtnFMujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_women" />

                <RadioButton
                    android:id="@+id/rbtnFHombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_men" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/req_favCol" />

            <CheckBox
                android:id="@+id/ckbFRojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_red" />

            <CheckBox
                android:id="@+id/ckbFVerde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_green" />

            <CheckBox
                android:id="@+id/ckbFAmarillo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_yellow" />

            <CheckBox
                android:id="@+id/ckbFAzul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_blue" />

            <CheckBox
                android:id="@+id/ckbFMorado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="320dp"
                android:text="@string/chk_purple" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnFLimpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/but_clean" />

                <Button
                    android:id="@+id/btnFMostrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/but_show" />

            </LinearLayout>

            <Button
                android:id="@+id/btnReturnGoogle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/but_mainScreen" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/9214589741"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-25dp"
                tools:layout_editor_absoluteY="689dp" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>