<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen3Buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen3Buttons">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:background="@color/material_dynamic_neutral_variant90">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_title"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <!-- Pregunta 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_question1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:singleLine="true">  <!-- Asegura que solo un chip esté seleccionado a la vez -->

            <com.google.android.material.chip.Chip
                android:id="@+id/chipYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_yes"
                app:chipBackgroundColor="@color/cardview_dark_background"
                android:textColor="@android:color/white"
                android:checkable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_no"
                app:chipBackgroundColor="@color/design_default_color_secondary_variant"
                android:textColor="@android:color/white"
                android:checkable="true"/>
        </com.google.android.material.chip.ChipGroup>


        <!-- Pregunta 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_question2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="20dp"/>

        <!-- Botón Flotante -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_send"
            app:backgroundTint="@color/material_dynamic_primary60"
            android:layout_marginTop="20dp"
            android:contentDescription="Botón para enviar respuestas"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="1dp"
            android:clickable="true"
            android:contentDescription="Botón flotante para mensaje"
            app:elevation="6dp"
            app:fabSize="normal"
            app:srcCompat="@android:drawable/ic_dialog_alert" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>