<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainHelpers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_text"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_text2"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text1,text2"
        app:barrierDirection="end"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/textGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text1,text2"/>

    <Button
        android:id="@+id/showButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text='@string/but_shwText'
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintStart_toEndOf="@+id/text1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"/>

    <Button
        android:id="@+id/hideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text='@string/but_hideText'
        app:layout_constraintTop_toBottomOf="@+id/showButton"
        app:layout_constraintStart_toEndOf="@+id/text1"
        android:layout_marginStart="34dp"/>

    <Button
        android:id="@+id/btnReturnHelpers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hideButton"
        app:layout_constraintStart_toEndOf="@id/text1"
        android:layout_marginStart="25dp"
        android:text="@string/but_mainScreen"/>

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/buttonLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="hideButton,showButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>